--- a/3diena/mogo-projektas/styles/main.css
+++ b/3diena/mogo-projektas/styles/main.css
@@ -167,76 +167,6 @@ h6 {
   font-size: 46px;
 }
 
-.section {
-  margin: 110px 0;
-}
-
-.container {
-  max-width: 1200px;
-  border: 1px solid red;
-  margin: 0 auto;
-}
-
-.title {
-  text-align: center;
-}
-.title h4,
-.title h3 {
-  color: #333333;
-}
-.title h4 {
-  font-family: "Kaushan Script", cursive;
-  margin-bottom: 25px;
-}
-.title h3 {
-  font-family: "Montserrat", sans-serif;
-  margin-bottom: 40px;
-  font-weight: bold;
-}
-.title p {
-  color: #999999;
-  font-size: 15px;
-  margin-bottom: 90px;
-  padding: 0 130px;
-  font-family: "Roboto", sans-serif;
-}
-.title .red-line {
-  margin-bottom: 45px;
-}
-
-.grey-line {
-  width: 60px;
-  background-color: #ffffff;
-  height: 3px;
-  margin: 0 auto;
-}
-
-.red-line {
-  width: 60px;
-  background-color: #f38181;
-  height: 3px;
-  margin: 0 auto;
-}
-
-.long-line {
-  width: 280px;
-  background-color: #f7ebc5;
-  height: 3px;
-}
-
-.red-white-line {
-  width: 280px;
-  height: 3px;
-  background-color: #f38181;
-}
-
-header {
-  background: url("../../../../3diena/mogo-projektas/images/home_background_image.jpg") center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-}
-
 nav {
   max-width: 1200px;
   margin: 0 auto;
@@ -263,9 +193,79 @@ nav li .active a,
 nav li a:hover {
   color: #fce38a;
   border-bottom: 2px solid #fce38a;
+  padding-bottom: 5px;
 }
 nav .logo {
   width: 40%;
+}
+
+.section {
+  margin: 110px 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.title {
+  text-align: center;
+}
+.title h4,
+.title h3 {
+  color: #333333;
+}
+.title h4 {
+  font-family: "Kaushan Script", cursive;
+  margin-bottom: 25px;
+}
+.title h3 {
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 40px;
+  font-weight: bold;
+}
+.title p {
+  color: #999999;
+  font-size: 15px;
+  margin-bottom: 90px;
+  margin-top: 45px;
+  padding: 0 130px;
+  font-family: "Roboto", sans-serif;
+}
+.title .red-line {
+  margin: 0 auto;
+}
+
+.grey-line {
+  width: 60px;
+  background-color: #ffffff;
+  height: 3px;
+  margin: 0 auto;
+}
+
+.red-line {
+  width: 60px;
+  background-color: #f38181;
+  height: 3px;
+}
+
+.long-line {
+  width: 280px;
+  background-color: #f7ebc5;
+  height: 3px;
+}
+
+.red-white-line {
+  width: 280px;
+  height: 3px;
+  background-color: #f38181;
+}
+
+header {
+  background: url("../../../../3diena/mogo-projektas/images/home_background_image.jpg") center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
 .content {
@@ -276,8 +276,7 @@ nav .logo {
 }
 .content h2 {
   font-family: "Kaushan Script", cursive;
-  margin-top: 120px;
-  margin-bottom: 23px;
+  margin: 120px 0 23px 0;
 }
 .content h1 {
   padding: 0 50px 50px 50px;
@@ -288,8 +287,7 @@ nav .logo {
   font-weight: bold;
   font-family: "Montserrat", sans-serif;
   padding: 12px 29px;
-  margin-top: 50px;
-  margin-bottom: 120px;
+  margin: 50px 0 120px 0;
 }
 .content button a {
   text-decoration: none;
@@ -298,6 +296,7 @@ nav .logo {
 .content .main-bottom {
   max-width: 1200px;
   margin: 0 auto;
+  text-align: left;
 }
 .content .main-bottom h4 {
   font-family: "Montserrat", sans-serif;
@@ -331,15 +330,59 @@ nav .logo {
   color: #f7ebc5;
 }
 
+/* Extra small devices (phones, 600px and down) */
+/* Small devices (portrait tablets and large phones, 600px and up) */
+/* Medium devices (landscape tablets, 768px and up) */
+/* Large devices (laptops/desktops, 992px and up) */
+/* Extra large devices (large laptops and desktops, 1200px and up) */
 #blog .blog-row {
   width: 100%;
 }
 #blog .blog-row .article {
   display: inline-block;
-  width: 33%;
+  width: 32%;
+  margin-top: 45px;
+  padding-left: 10px;
 }
 #blog .blog-row .article img {
-  height: 240px;
+  width: 100%;
+}
+#blog .blog-row .article h5 {
+  font-family: "Montserrat", sans-serif;
+  padding: 20px 0 20px 10px;
+  text-transform: uppercase;
+}
+#blog .blog-row .article p {
+  font-family: "Roboto", sans-serif;
+  color: #999999;
+  font-size: 15px;
+  padding-left: 10px;
+  padding-bottom: 20px;
+  line-height: 1.6;
+  border-bottom: 1px solid #e5e5e5;
+}
+#blog .blog-row .article .views-comments {
+  width: 50%;
+  padding-left: 10px;
+  padding-top: 15px;
+}
+#blog .blog-row .article .views-comments img {
+  width: 20px;
+  height: auto;
+}
+#blog .blog-row .article .views-comments p {
+  display: inline-block;
+  font-style: italic;
+  padding: 0;
+  border: none;
+}
+#blog .blog-row .article .views-comments .views,
+#blog .blog-row .article .views-comments .comments {
+  display: inline-block;
+  width: 35%;
+}
+#blog .blog-row .article .views-comments .comments img {
+  vertical-align: middle;
 }
 
 #works .works-pictures {
@@ -347,9 +390,49 @@ nav .logo {
   padding: 0;
 }
 #works .works-pictures img {
-  max-width: 470px;
   width: 100%;
-  vertical-align: top;
+}
+
+.review-section-two .review-items {
+  margin: 0 20px;
+}
+.review-section-two .review-items .review-item-icon,
+.review-section-two .review-items .review-item-text,
+.review-section-two .review-items .review-item-picture {
+  display: inline-block;
+  vertical-align: middle;
+}
+.review-section-two .review-items .review-item-icon {
+  width: 4%;
+}
+.review-section-two .review-items .review-item-icon:last-child {
+  text-align: right;
+}
+.review-section-two .review-items .review-item-picture {
+  width: 20%;
+}
+.review-section-two .review-items .review-item-picture img {
+  width: 100%;
+  max-width: 210px;
+}
+.review-section-two .review-items .review-item-text {
+  width: 70%;
+}
+.review-section-two .review-items .review-item-text p {
+  font-family: "Roboto", sans-serif;
+  color: #999999;
+  font-style: italic;
+  line-height: 1.6;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+.review-section-two .review-items .review-item-text .red-line {
+  display: inline-block;
+  margin-right: 5px;
+}
+.review-section-two .review-items .review-item-text h4 {
+  font-family: "Kaushan Script", cursive;
+  display: inline-block;
 }
 
 .client-section {
@@ -359,12 +442,53 @@ nav .logo {
   padding-top: 110px;
 }
 .client-section .client-reviews {
-  border: 1px solid red;
-  margin-bottom: 110px;
+  padding-bottom: 30px;
+  margin-top: 90px;
+}
+.client-section .client-reviews .client-row {
+  margin-bottom: 80px;
+  width: 100%;
 }
 .client-section .client-reviews .client-row .client {
   display: inline-block;
-  width: 45%;
+  width: 47%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.client-section .client-reviews .client-row .client .client-image {
+  display: inline-block;
+  width: 25%;
+  vertical-align: top;
+  padding-left: 15px;
+}
+.client-section .client-reviews .client-row .client .client-image img {
+  width: 100%;
+  max-width: 110px;
+}
+.client-section .client-reviews .client-row .client .client-info {
+  display: inline-block;
+  width: 70%;
+}
+.client-section .client-reviews .client-row .client .client-info h5 {
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 15px;
+  color: #333333;
+}
+.client-section .client-reviews .client-row .client .client-info p {
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 15px;
+  font-size: 15px;
+  color: #333333;
+}
+.client-section .client-reviews .client-row .client .client-info i {
+  font-style: italic;
+}
+.client-section .client-reviews .client-row .client .client-info .red-line {
+  margin-bottom: 25px;
+}
+.client-section .client-reviews .client-row .client .client-info p:last-child {
+  color: #999999;
+  line-height: 1.6;
 }
 
 .map {
@@ -374,28 +498,165 @@ nav .logo {
 }
 .map .map-link {
   text-align: center;
-  margin-top: 56px;
-  margin-bottom: 56px;
+  padding: 56px 0;
 }
 .map .map-link h4 {
-  color: #f38181;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   margin-bottom: 22px;
 }
+.map .map-link h4 a {
+  text-decoration: none;
+  color: #f38181;
+}
 .map .map-link img {
   margin-bottom: 18px;
 }
+.map .map-link .red-line {
+  margin: 0 auto;
+}
 
+#contacts h6 {
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  color: #cccccc;
+  margin-bottom: 40px;
+}
+#contacts p {
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.6;
+  color: #999999;
+}
 #contacts .contacts,
 #contacts .blogs,
 #contacts .instagram {
   display: inline-block;
+}
+#contacts .contacts {
+  width: 40%;
+  vertical-align: top;
+  padding-right: 15px;
+}
+#contacts .contacts .follow-part {
+  margin-top: 40px;
+}
+#contacts .contacts .follow-part p {
+  margin-bottom: 20px;
+  color: #333333;
+}
+#contacts .contacts .follow-part b {
+  font-weight: bold;
+}
+#contacts .contacts .follow-part .follow-us {
+  border-top: 1px solid #e5e5e5;
+  padding-top: 20px;
+}
+#contacts .contacts .follow-part .follow-us p {
+  font-style: italic;
+  display: inline;
+  padding-right: 5px;
+}
+#contacts .contacts .follow-part .follow-us img {
+  vertical-align: top;
+  padding-right: 5px;
+}
+#contacts .contacts .form {
+  margin-top: 30px;
+  width: 100%;
+}
+#contacts .contacts .form input[type=email] {
+  border: 1px solid #e5e5e5;
+  padding: 15px;
+  width: 230px;
+}
+#contacts .contacts .form input[type=submit] {
+  text-transform: uppercase;
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  background-color: #95e1d3;
+  border: none;
+  padding: 17px 30px;
+  width: 150px;
+  margin-left: -5px;
+}
+#contacts .contacts .form input[placeholder="Your Email..."] {
+  color: #e5e5e5;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 15px;
+}
+#contacts .blogs {
   width: 30%;
+  vertical-align: top;
+  padding-right: 15px;
+}
+#contacts .blogs h5 {
+  font-family: "Montserrat", sans-serif;
+  padding-bottom: 40px;
+  color: #333333;
+}
+#contacts .blogs .blog-post {
+  padding-bottom: 30px;
+}
+#contacts .blogs .blog-post-image {
+  display: inline-block;
+  width: 35%;
+}
+#contacts .blogs .blog-post-image img {
+  width: 100%;
+}
+#contacts .blogs .blog-post-info {
+  display: inline-block;
+  width: 55%;
+  padding: 0 10px;
+}
+#contacts .blogs .blog-post-info h5 {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  padding-bottom: 10px;
+  line-height: 1.6;
+  color: #333333;
+}
+#contacts .blogs .blog-post-info p {
+  font-style: italic;
+  font-size: 13px;
+}
+#contacts .instagram {
+  vertical-align: top;
+  width: 25%;
+}
+#contacts .instagram h5 {
+  font-family: "Montserrat", sans-serif;
+  padding-bottom: 40px;
+  color: #333333;
+}
+#contacts .instagram p {
+  margin-top: 20px;
+}
+#contacts .instagram a {
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 13px;
+}
+#contacts .instagram img {
+  width: 100%;
+  max-width: 87px;
 }
 #contacts .copyright {
-  border-top: 1px solid #999999;
+  border-top: 1px solid #e5e5e5;
   margin-top: 95px;
+  text-align: center;
+}
+#contacts .copyright p {
+  margin: 25px 0;
+  color: #333333;
+}
+#contacts .copyright p span {
+  color: #f38181;
 }
 
 #service .services {
@@ -405,7 +666,7 @@ nav .logo {
 #service .services .service-item {
   display: inline-block;
   width: 31%;
-  padding: 50px 10px 50px 10px;
+  padding: 50px 15px 50px 10px;
 }
 #service .services .service-item .service-icon {
   display: inline-block;
@@ -424,6 +685,7 @@ nav .logo {
 #service .services .service-item .service-text p {
   font-family: "Roboto", sans-serif;
   color: #999999;
+  line-height: 1.6;
 }
 #service .services:last-child {
   border: none;
@@ -439,37 +701,22 @@ nav .logo {
   padding-top: 100px;
 }
 
-.what-we-do .activity-section h5 {
-  font-family: "Montserrat", sans-serif;
-  color: #333333;
-  padding-bottom: 20px;
-  display: inline;
-}
-.what-we-do .activity-section p {
-  font-family: "Roboto", sans-serif;
-  color: #999999;
-  font-style: italic;
-  line-height: 1.6;
-  font-size: 15px;
-  display: inline;
-  width: 50%;
-}
 .what-we-do .activity-section .picture {
   display: inline-block;
-  width: 45%;
-  margin-right: 30px;
+  width: 47%;
+  padding-right: 30px;
 }
 .what-we-do .activity-section .picture img {
   width: 100%;
 }
 .what-we-do .activity-section .activity {
   display: inline-block;
-  width: 52%;
-  vertical-align: top;
+  width: 48%;
 }
 .what-we-do .activity-section .activity-item {
   border: 1px solid #e5e5e5;
   padding: 15px;
+  vertical-align: top;
 }
 .what-we-do .activity-section .activity-item .activity-text,
 .what-we-do .activity-section .activity-item .activity-icon {
@@ -478,9 +725,36 @@ nav .logo {
 .what-we-do .activity-section .activity-item .activity-text {
   width: 85%;
   vertical-align: top;
+  padding: 10px 0 0 10px;
+}
+.what-we-do .activity-section .activity-item .activity-text h5 {
+  font-family: "Montserrat", sans-serif;
+  color: #333333;
+  padding-bottom: 20px;
+  display: inline;
+}
+.what-we-do .activity-section .activity-item .activity-text p {
+  font-family: "Roboto", sans-serif;
+  color: #999999;
+  font-style: italic;
+  line-height: 1.6;
+  font-size: 15px;
+  display: inline;
+  width: 50%;
 }
 .what-we-do .activity-section .activity-item .activity-icon {
   width: 5%;
+  vertical-align: middle;
+}
+.what-we-do .activity-section .activity-item:nth-child(2) {
+  margin-bottom: 10px;
+}
+.what-we-do .activity-section .activity-item:nth-child(2) .activity-text {
+  width: 90%;
+  padding-right: 11px;
+}
+.what-we-do .activity-section .activity-item:nth-child(3) {
+  margin-bottom: 10px;
 }
 
 .reviews-section-one {
@@ -489,30 +763,48 @@ nav .logo {
   background-size: cover;
 }
 .reviews-section-one .review-items {
-  border: 1px solid red;
+  padding: 70px 20px;
 }
 .reviews-section-one .review-items .review-item-icon,
 .reviews-section-one .review-items .review-item-text,
 .reviews-section-one .review-items .review-item-picture {
   display: inline-block;
+  vertical-align: middle;
 }
 .reviews-section-one .review-items .review-item-icon {
-  width: 5%;
+  width: 3%;
+}
+.reviews-section-one .review-items .review-item-icon:last-child {
+  text-align: right;
 }
 .reviews-section-one .review-items .review-item-picture {
-  width: 20%;
+  width: 13%;
+  padding-left: 55px;
+}
+.reviews-section-one .review-items .review-item-picture img {
+  width: 100%;
+  max-width: 150px;
+  height: auto;
 }
 .reviews-section-one .review-items .review-item-text {
-  width: 60%;
+  padding: 0 55px;
+  width: 65%;
 }
 .reviews-section-one .review-items .review-item-text p {
   font-family: "Roboto", sans-serif;
   color: #999999;
   font-style: italic;
   line-height: 1.6;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+.reviews-section-one .review-items .review-item-text .red-line {
+  display: inline-block;
+  margin-right: 5px;
 }
 .reviews-section-one .review-items .review-item-text h4 {
   font-family: "Kaushan Script", cursive;
+  display: inline-block;
 }
 
 .team .team-row {
@@ -527,8 +819,7 @@ nav .logo {
   width: 100%;
 }
 .team .team-row .team-member h5 {
-  margin-top: 30px;
-  margin-bottom: 15px;
+  margin: 30px 0 15px 0;
 }
 .team .team-row .team-member p {
   color: #999999;
@@ -536,12 +827,12 @@ nav .logo {
   font-family: "Roboto", sans-serif;
 }
 
-.logo {
+.logos {
   background: url("../../../../3diena/mogo-projektas/images/grey-line.jpg") center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-.logo .logo-image img {
+.logos .logo-image img {
   width: 100%;
 }
 
@@ -551,7 +842,8 @@ nav .logo {
 }
 #about .image-row img {
   margin: 0 7px;
-  height: 250px;
+  width: 100%;
+  max-width: 380px;
 }
 #about .image-row img[alt=superteam] {
   height: 260px;
@@ -566,7 +858,7 @@ nav .logo {
   display: inline-block;
   width: 19%;
   text-align: center;
-  padding: 80px 0;
+  padding: 80px 3px;
   color: #ffffff;
   font-family: "Montserrat", sans-serif;
   border-left: 1px solid #b5eae0;
