--- a/3diena/mogo-projektas/styles/pages/_contact.scss
+++ b/3diena/mogo-projektas/styles/pages/_contact.scss
@@ -7,20 +7,25 @@
 
   .map-link {
     text-align: center;
-    margin-top: 56px;
-    margin-bottom: 56px;
+    padding: 56px 0 ;
 
     h4 {
-      color: $salmon;
       font-family: $montserrat;
       font-weight: bold;
       margin-bottom: 22px;
 
+      a {
+        text-decoration: none;
+        color: $salmon;
+      }
     }
 
     img {
       margin-bottom: 18px;
+    }
 
+    .red-line {
+      margin: 0 auto;
     }
   }
 }
@@ -28,15 +33,177 @@
 // footer contacts part
 
 #contacts {
+
+  h6 {
+    font-weight: bold;
+    font-family: $montserrat;
+    color: $grey;
+    margin-bottom: 40px;
+  }
+
+  p {
+    font-size: $small;
+    font-family: $roboto;
+    line-height: 1.6;
+    color: $textgrey;
+  }
+
   .contacts,
   .blogs,
   .instagram {
     display: inline-block;
+  }
+
+  .contacts {
+    width: 40%;
+    vertical-align: top;
+    padding-right: 15px;
+
+    .follow-part {
+      margin-top: 40px;
+
+      p {
+        margin-bottom: 20px;
+        color: $textblack;
+      }
+
+      b {
+        font-weight: bold;
+      }
+
+      .follow-us {
+        border-top: 1px solid $lightgrey;
+        padding-top: 20px;
+
+        p {
+          font-style: italic;
+          display: inline;
+          padding-right: 5px;
+        }
+
+        img {
+          vertical-align: top;
+          padding-right: 5px;
+        }
+      }
+    }
+
+    .form {
+      margin-top: 30px;
+      width: 100%;
+
+      input[type="email"] {
+        border: 1px solid $lightgrey;
+        padding: 15px;
+        width: 230px;
+      }
+
+      input[type="submit"] {
+        text-transform: uppercase;
+        color: $textwhite;
+        font-family: $montserrat;
+        font-weight: bold;
+        background-color: $mint;
+        border: none;
+        padding: 17px 30px;
+        width: 150px;
+        margin-left: -5px;
+      }
+
+      input[placeholder="Your Email..."] {
+        color: $lightgrey;
+        font-family: $roboto;
+        font-style: italic;
+        font-size: $small;
+      }
+    }
+  }
+
+  .blogs {
     width: 30%;
+    vertical-align: top;
+    padding-right: 15px;
+
+    h5 {
+      font-family: $montserrat;
+      padding-bottom: 40px;
+      color: $textblack;
+    }
+
+    .blog-post {
+      padding-bottom: 30px;
+    }
+
+    .blog-post-image {
+      display: inline-block;
+      width: 35%;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .blog-post-info {
+      display: inline-block;
+      width: 55%;
+
+      padding: 0 10px;
+
+      h5 {
+        text-transform: uppercase;
+        font-size: $smallest;
+        font-family: $montserrat;
+        padding-bottom: 10px;
+        line-height: 1.6;
+        color: $textblack;
+      }
+
+      p {
+        font-style: italic;
+        font-size: $ssmallest;
+      }
+    }
+  }
+
+  .instagram {
+    vertical-align: top;
+    width: 25%;
+
+    h5 {
+      font-family: $montserrat;
+      padding-bottom: 40px;
+      color: $textblack;
+    }
+
+    p {
+      margin-top: 20px;
+    }
+
+    a {
+      text-decoration: none;
+      font-family: $roboto;
+      font-style: italic;
+      font-size: $ssmallest;
+    }
+
+    img {
+      width: 100%;
+      max-width: 87px;
+    }
   }
 
   .copyright {
-    border-top: 1px solid $textgrey;
+    border-top: 1px solid $lightgrey;
     margin-top: 95px;
+    text-align: center;
+
+    p {
+      margin: 25px 0;
+      color: $textblack;
+
+      span {
+        color: $salmon;
+      }
+    }
   }
 }
