--- a/3diena/mogo-projektas/styles/pages/_about.scss
+++ b/3diena/mogo-projektas/styles/pages/_about.scss
@@ -5,7 +5,8 @@
   .image-row {
     img {
       margin: 0 7px;
-      height: 250px;
+      width: 100%;
+      max-width: 380px;
     }
 
     img[alt="superteam"] {
@@ -13,6 +14,8 @@
     }
   }
 }
+
+// statistics line
 
 .statistics {
   background: url('../../../3diena/mogo-projektas/images/blue_line.jpg');
@@ -23,7 +26,7 @@
     display: inline-block;
     width: 19%;
     text-align: center;
-    padding: 80px 0;
+    padding: 80px 3px;
     color: $textwhite;
     font-family: $montserrat;
     border-left: 1px solid $lightmint;
